<resources>
    <string name="app_name"> INTI Fast Food Cafe </string>
    <!--Recycler View Strings-->
    <string-array name="SOP">
        <item>Sanitize Your Hands </item>
        <item>Fully Vaccinated</item>
        <item>Wear Face Mask</item>
        <item>Keep Distance</item>
        <item>2 per Table</item>
        <item>Scan with\nMySejahtera</item>
    </string-array>
    <string-array name="description">
        <item>Make sure to sanitize you hands prior and after
            eating at the restaurant.</item>
        <item>An individual is considered to be fully vaccinated after 14 days from 2nd Dose.</item>
        <item>Wear your mask prior and after eating at the restaurant.</item>
        <item>Please keep a distance of 1.5 metres apart from each other.</item>
        <item>Only two person per table is allowed and not more than that.</item>
        <item>Scan to checkin and checkout mysejahtera status at this premise </item>
    </string-array>
    <!--Action Bar Message for Toast-->
    <string name="action_order_message">You want to make a Reservation</string>
    <string name="action_status_message">You to Review your Reservation.</string>
    <string name="action_enquire_message">You want to know more about us.</string>
    <string name="action_logout_message">You have logged out Successfully !</string>
    <!--Action Bar -->
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_enquire">Navigate</string>
    <string name="action_logout">Logout</string>
    <!--Dialog for alert pop-up -->
    <string name="alert_title">Are you Fully Vaccinated ? </string>
    <string name="alert_message">Only Fully Vaccinated Individuals who have completed 14 days since their second dose are allowed in this premise.</string>
    <string name="ok_button">Yes</string>
    <string name="cancel_button">No</string>
    <!--Implicit Intents-->
    <string name="edittext_uri">https://www.instagram.com/explore/locations/1027177849/inti-cafe?hl=en</string>
    <string name="button_uri">Open Our Website</string>
    <string name="edittext_loc">INTI International University</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\Inti fast food restaurant is awesome !</string>
    <string name="button_share">Share your review to your friends</string>
    <string name="setchoosertitle">Share this text with :</string>
    <!--Implicit Intents ends here-->

    <!--Quiz Strings goes here -->
    <string name="first_question">Are you feeling sick ? For example : fever, sore throat, flu and headaches.</string>
    <string name="second_question">Besides the previous, are you having any cough or loss of smell and taste ?</string>
    <string name="third_question">Have you associated in any event known with covid-19 cluster ?</string>
    <string name="forth_question">Have you travelled to any country outside Malaysia within the last 14 days ?</string>
    <string name="fifth_question">Have you been in close contact with any confirmed or suspected COVID-19 patient ?</string>
    <string name="sixth_question">Are you a MOH covid-19 volunteer in the last 14 days ? </string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="allow_toast">Eligible to enter premise.</string>
    <string name="notallowed_toast">Not Eligible to enter premise !</string>
    <string name="next_button">Next</string>
    <string name="the_end">The End</string>
    <!--Dialog for alert pop-up in Question Declaration Form-->
    <string name="alert_title2">Not Suitable for Dine In !</string>
    <string name="alert_message2">You pose a threat to infect other customers at the premise therefore you are not credible to enter !</string>
    <string name="ok_button2">Noted. Got it !</string>
    <string name="reservation_testing">Testing2</string>

    <!--Quiz Strings  ends here -->
    <!--Order Acitivity Strings also used for view Reservation to make Reservation-->
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="note_label_text">Note</string>
    <string name="choose_delivery_method">Choose a Reservation Method:</string>
    <string name="same_day_messenger_service">Dine in Reservation</string>
    <string name="next_day_ground_delivery">Food Delivery</string>
    <string name="pick_up">Pick up</string>
    <!--Spinner-->
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="date_label_text">Choose a preferred delivery date and time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_toast">Time</string>
    <string name="datepicker">datePicker</string>
    <string name="date">Date :</string>
    <string name="timepicker">timePicker</string>
    <string name="order_textview">Please Fill in All the Details :</string>
    <string name="checkbox_text">I hereby declare that all information are true.</string>
    <string name="your_rerservation">Your Rerservation Details :</string>
    <string name="reservation_details">reservation_details</string>
    <string name="back_to_home">Back to Home</string>
    <string name="title_activity_progressbar">progressbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_button">Confirm</string>
    <string name="review_button">Review</string>
    <!--<string name="time_toast">Time</string>-->


    <string name="btnlogin_text">LOGIN</string>
    <string name="btnsignup_text">SIGN UP</string>
    <string name="enter_your_user_id_text">Enter Your User ID</string>
    <string name="don_t_have_an_account_text">Don\'t have an account ?</string>
    <string name="enter_your_password_text">Enter Your Password</string>
    <string name="choose_an_id_text">Choose an ID</string>
    <string name="enter_password_text">Enter Password</string>
    <string name="enter_password_again_text">Enter Password Again</string>
    <string name="sign_up2_text">Sign Up</string>
    <string name="gologin_text">LOGIN</string>
    <string name="home_page_text">Hello</string>
    <string name="RandomString">Booking ID</string>

    <!--ADMIN Part -->
    <string name="button_add">Add</string>
    <string name="button_view">View</string>
    <string name="tv_department">Select Delivery Method</string>
    <string name="tv_title">Add A New Reservation</string>
    <string name="et_name">Name</string>

    <string name="tv_title2">Edit Reservation</string>
    <string name="tvName">Name</string>
    <string name="tvSalary">Payment</string>
    <string name="tvDepartment">Select Delivery Method</string>
    <string name="tvJoinDate">JoinDate</string>
    <string name="tvAddress">Address</string>
    <string name="tvPhone">Phone</string>
    <string name="tvTime">Time</string>

    <string name="delete_button_text">Delete</string>
    <string name="tv_salary">Customer Payment</string>
    <string name="tv_joindate">JoinDate</string>
    <string name="btn_edit">Edit</string>

    <array name="departments">
        <item>Dine in Reservation</item>
        <item>Pick Up</item>
        <item>Food Delivery</item>

    </array>
    <string name="add_a_new_employee">Add New Reservation</string>

    <string name="add_employee">Add Reservation</string>
    <string name="view_employee">View Reservation</string>
    <string name="select_department">Select Delivery Method</string>
    <string name="edit_employee">Edit</string>
    <string name="delete_employee">Delete</string>
    <string name="update_employee">Update</string>
    <string name="enter_employee_name">Enter Name</string>

    <string name="enter_employee_phone">Enter Phone</string>
    <string name="enter_employee_address">Enter Address</string>
    <string name="enter_employee_time">Enter Time</string>

    <string name="enter_salary">Enter Customer Payment</string>


</resources>