<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_meal2"
        android:title="@string/action_order"
        android:orderInCategory="10"
        app:showAsAction="always" />
        <!--android:onClick="onAlert"-->

    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_enquire"
        android:icon="@drawable/ic_navigate"
        android:orderInCategory="20"
        android:title="@string/action_enquire"
        app:showAsAction="always" />

</menu>