<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30sp"
    android:onClick="Login"
    android:orientation="vertical"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/etUserID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/choose_an_id_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPWSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/enter_password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etConfirmPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/enter_password_again_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSignUp2"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:onClick="SignUp"
        android:text="@string/sign_up2_text" />

    <Button
        android:id="@+id/btnGoLogin"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:onClick="Login"
        android:text="@string/gologin_text" />
</LinearLayout>