<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_your_user_id_text"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_your_password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/btnlogin_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_weight="0"
            android:text="@string/don_t_have_an_account_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/btnsignup_text"
            android:textColor="#03A9F4" />
    </LinearLayout>
</LinearLayout>