<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".Confirmation">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/tvNote"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="224dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvPhone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="459dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="338dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="396dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDelivery"
        android:layout_width="343dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="288dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvString"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="335dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="109dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="98dp"
        android:onClick="goHome"
        android:text="@string/back_to_home" />

    <Button
        android:id="@+id/idBtnReadBookings"
        android:layout_width="122dp"
        android:layout_height="75dp"
        android:layout_alignTop="@+id/tvDate"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="-22dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="94dp"
        android:layout_toEndOf="@+id/back_to_home"
        android:text="@string/review_button" />

    <Button
        android:id="@+id/idBtnAddBookings"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPhone"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="98dp"
        android:text="@string/confirm_button" />

</RelativeLayout>